Mexendo na responsividade

--- a/S3N0Website.html
+++ b/S3N0Website.html
@@ -40,19 +40,19 @@
         <div id="mensagems3n0">"Faça da música a essência da vida"</div>
         <section id="platforms">
             <a href="https://open.spotify.com/intl-pt/artist/5R1yd5y1Aap6x2iFiXjPj1" target="_blank">
-                <i href="" style="font-size: 5rem" class="bi bi-spotify icons" id="spotifyicon"></i>
+                <i href=""  class="bi bi-spotify icons" id="spotifyicon"></i>
             </a>
             <a href="https://music.apple.com/br/artist/s3n0/1505832247" target="_blank">
-                <i style="font-size: 5rem" class="bi bi-apple icons" id="applemusicicon"></i>
+                <i  class="bi bi-apple icons" id="applemusicicon"></i>
             </a>
             <a href="https://instagram.com/s3n0music" target="_blank">
-                <i style="font-size: 5rem" class="fa fa-instagram icons" aria-hidden="true" id="instagramicon"></i>
+                <i  class="fa fa-instagram icons" aria-hidden="true" id="instagramicon"></i>
             </a>
             <a href="https://www.youtube.com/channel/UCSYOtbEYaocHqC7mDwAXGHw" target="blank">
-                <i style="font-size: 5rem" class="bi bi-youtube icons" id="youtubeicon"></i>
+                <i  class="bi bi-youtube icons" id="youtubeicon"></i>
             </a>
             <a href="https://soundcloud.com/s3n0" target="blank">
-                <i style="font-size: 5rem" class="fa fa-soundcloud icons" id="soundcloudicon"></i>
+                <i  class="fa fa-soundcloud icons" id="soundcloudicon"></i>
             </a>
         </section>
     </main>
@@ -255,18 +255,18 @@
     <div id="footer">
         <div>
             <div id="links-footer"><a href="https://open.spotify.com/intl-pt/artist/5R1yd5y1Aap6x2iFiXjPj1" target="_blank">
-                    <i href="" style="font-size: 2rem" class="bi bi-spotify icons" id="spotifyicon"></i>
+                    <i href="" id="spotifyicon2" class="bi bi-spotify icons iconsfooter" ></i>
                 </a>
                 <a href="https://music.apple.com/br/artist/s3n0/1505832247" target="_blank">
-                    <i style="font-size: 2rem" class="bi bi-apple icons" id="applemusicicon"></i>
+                    <i id="applemusicicon2" class="bi bi-apple icons iconsfooter" ></i>
                 </a>
                 <a href="https://instagram.com/s3n0music" target="_blank">
-                    <i style="font-size: 2rem" class="fa fa-instagram icons" aria-hidden="true" id="instagramicon"></i>
+                    <i id="instagramicon2" class="fa fa-instagram icons iconsfooter" aria-hidden="true" ></i>
                     <a href="https://www.youtube.com/channel/UCSYOtbEYaocHqC7mDwAXGHw" target="blank">
-                        <i style="font-size: 2rem" class="bi bi-youtube icons" id="youtubeicon"></i>
+                        <i id="youtubeicon2" class="bi bi-youtube icons iconsfooter" ></i>
                     </a>
                     <a href="https://soundcloud.com/s3n0" target="blank">
-                        <i style="font-size: 2rem" class="fa fa-soundcloud icons" id="soundcloudicon"></i>
+                        <i id="soundcloudicon2" class="fa fa-soundcloud icons iconsfooter" ></i>
                     </a>
             </div>
             <h5>Contato: produtor.s3n0@gmail.com</h5>
