Adicionando doli parde e dilhi lama]

--- a/S3N0Website.html
+++ b/S3N0Website.html
@@ -110,6 +110,22 @@
     <h1 id="releases-title">Meus Releases</h1>
     <section class="releases" id="lancamentos">
         <div class="card">
+            <a href="https://open.spotify.com/intl-pt/track/3He3nnP19G1ok7RAvc8nlu?si=de11f64cb2264f53" target="_blank">
+                <img class="images" src="https://i.scdn.co/image/ab67616d0000b273dc3c0776efd6eaac4e7a64a7" alt="Avatar" style="width:100%">
+            </a>
+            <div class="container">
+                <h4><b>Dilhi Lama</b></h4>
+            </div>
+        </div>
+        <div class="card">
+            <a href="https://open.spotify.com/intl-pt/track/0I8T8DXuosdyVrOy7T6lgX?si=b97798678a494276" target="_blank">
+                <img class="images" src="https://i.scdn.co/image/ab67616d0000b27367c2c90dc835420c0ce06107" alt="Avatar" style="width:100%">
+            </a>
+            <div class="container">
+                <h4><b>Doli Parde</b></h4>
+            </div>
+        </div>
+        <div class="card">
             <a href="https://open.spotify.com/intl-pt/track/1JI5SuVVmXWCGrJ8HiicxF?si=99013869233b4daf" target="_blank">
                 <img class="images" src="https://i.scdn.co/image/ab67616d0000b273b334b108e95e638386adabe8" alt="Avatar" style="width:100%">
             </a>
